--- a/css/scss/table/_riskassessment-task.scss
+++ b/css/scss/table/_riskassessment-task.scss
@@ -30,6 +30,9 @@
   * {
     box-sizing: border-box;
   }
+  .riskassessment-task-actions {
+    margin-left: auto;
+  }
 
   > * {
     margin-top: auto;
